--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
   <link rel="stylesheet" href="style.css">
   <style>
     /* BOTÃO MENU MOBILE DENTRO DO HEADER */
+	
     .btn-menu-mobile {
-      display: none;
-      position: absolute;
-      bottom: 5px;          /* canto inferior do header */
-      right: 2cm;           /* deslocado 2cm da borda direita */
-      background: var(--blue);
-      color: #fff;
-      font-weight: bold;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 8px;
-      text-align: center;
-      z-index: 1001;
-    }
+  display: block;          /* sempre visível */
+  position: absolute;
+  bottom: 5px;             /* canto inferior do header */
+  right: 2cm;              /* deslocado 2cm da borda direita */
+  background: var(--blue);
+  color: #fff;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 8px;
+  text-align: center;
+  z-index: 1001;
+}
+
 
     /* MENU RECOLHÍVEL MOBILE */
     .menu-mobile {
@@ -905,6 +907,3 @@
   </script>
 </body>
 </html>
-
-
-
