--- a/encomendas.html
+++ b/encomendas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chef Burger AO – Encomendas</title>
+  <title>-Chef Burger AO – Encomendas-</title>
   <link rel="stylesheet" href="style.css">
   <style>
     html, body {
@@ -28,13 +28,13 @@
     }
     .logo img { height: 65px; }
 
-    /* BOTÃO MENU MOBILE DENTRO DO HEADER */
+    /* BOTÃO MENU MOBILE */
     .btn-menu-mobile {
       display: none;
       position: absolute;
       bottom: 5px;
       right: 2cm;
-      background: var(--blue);
+      background: #007BFF;
       color: #fff;
       font-weight: bold;
       padding: 0.5rem 1rem;
@@ -50,8 +50,8 @@
       flex-direction: column;
       gap: 0.4rem;
       padding: 0.6rem;
-      background: var(--bg);
-      border-bottom: 1px solid #eee;
+      background: #fff;
+      border: 1px solid #ddd;
       position: fixed;
       top: 130px;
       left: 50%;
@@ -65,12 +65,17 @@
       padding: 0.6rem 0.8rem;
       border-radius: 8px;
       text-align: center;
+      background: #007BFF;
+      color: #fff;
+      font-weight: bold;
+    }
+    .menu-mobile .btn-nav.whatsapp {
+      background: #25D366;
     }
 
     @media (max-width: 768px) {
-      .barra-navegacao { display: none; }
       .btn-menu-mobile { display: block; }
-      .menu-mobile { display: flex; }
+      .barra-navegacao { display: none; }
     }
 
     /* NAV DESKTOP */
@@ -214,10 +219,9 @@
 
   <!-- MENU MOBILE -->
   <nav class="menu-mobile" id="menuMobile">
-    <a href="index.html" class="btn-nav">Menu</a>
-    <a href="encomendas.html" class="btn-nav">Encomendas</a>
-    <a href="informacoes.html" class="btn-nav">Informações</a>
-    <a href="https://wa.me/244925918468" class="btn-nav whatsapp">Posso Ajudar?</a>
+    <a href="index.html" class="btn-nav" onclick="fecharMenu()">Menu</a>
+    <a href="informacoes.html" class="btn-nav" onclick="fecharMenu()">Informações</a>
+    <a href="https://wa.me/244925918468" class="btn-nav whatsapp" onclick="fecharMenu()">Posso Ajudar?</a>
   </nav>
 
   <!-- NAV DESKTOP -->
@@ -260,6 +264,11 @@
     function toggleMenu() {
       const menu = document.getElementById("menuMobile");
       menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+    }
+
+    function fecharMenu() {
+      const menu = document.getElementById("menuMobile");
+      menu.style.display = "none";
     }
 
     let carrinho = JSON.parse(localStorage.getItem("carrinhoChefBurger")) || [];
@@ -344,7 +353,7 @@
       window.location.href = "index.html";
     }
 
-       // Inicializar carrinho ao carregar página
+    // Inicializar carrinho ao carregar página
     mostrarCarrinho();
   </script>
 </body>
