--- a/encomendas.html
+++ b/encomendas.html
@@ -248,7 +248,7 @@
 
   <!-- CARRINHO -->
   <div class="carrinho-container">
-    <h2>🛒 Carrinho de Encomendas</h2>
+    <h2>Encomenda</h2>
     <div class="carrinho-scroll">
       <table id="tabelaCarrinho">
         <thead>
