--- a/encomendas.html
+++ b/encomendas.html
@@ -1,280 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-AO">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chef Burger AO – Encomendas</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      overflow-x: hidden;
-      overflow-y: hidden;
-      max-width: 100vw;
-      box-sizing: border-box;
-    }
-    * { box-sizing: inherit; }
-
-    /* HEADER */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      height: 80px;
-      background: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-    .logo img { height: 65px; }
-
-    /* BOTÃO MENU MOBILE */
-    .btn-menu-mobile {
-      display: none;
-      position: absolute;
-      bottom: 5px;
-      right: 2cm;
-      background: #007BFF;
-      color: #fff;
-      font-weight: bold;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 8px;
-      text-align: center;
-      z-index: 1001;
-    }
-
-    /* MENU MOBILE */
-    .menu-mobile {
-      display: none;
-      flex-direction: column;
-      gap: 0.4rem;
-      padding: 0.6rem;
-      background: #fff;
-      border: 1px solid #ddd;
-      position: fixed;
-      top: 130px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 95%;
-      z-index: 2000;
-    }
-    .menu-mobile .btn-nav {
-      width: 100%;
-      font-size: 0.85rem;
-      padding: 0.6rem 0.8rem;
-      border-radius: 8px;
-      text-align: center;
-      background: #007BFF;
-      color: #fff;
-      font-weight: bold;
-    }
-    .menu-mobile .btn-nav.whatsapp { background: #25D366; }
-
-    /* VISIBILIDADE MOBILE */
-    @media screen and (max-width: 992px) {
-      .barra-navegacao { display: none !important; }
-      .btn-menu-mobile { display: block !important; }
-    }
-
-    /* NAV DESKTOP */
-    .barra-navegacao {
-      position: fixed;
-      top: 80px;
-      width: 100%;
-      background: #f4f4f4;
-      border-bottom: 1px solid #eee;
-      padding: 0.8rem;
-      display: flex;
-      justify-content: center;
-      gap: 0.5rem;
-      z-index: 999;
-    }
-    .btn-nav {
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-      min-width: 120px;
-      text-align: center;
-      font-size: 0.9rem;
-      background: #007BFF;
-      color: #fff;
-    }
-    .btn-nav.whatsapp { background: #25D366; }
-
-    /* CARRINHO */
-    .carrinho-container {
-      margin: 160px auto 20px auto;
-      max-width: 900px;
-      width: 95%;
-      height: calc(100vh - 200px);
-      display: flex;
-      flex-direction: column;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      background: #fff;
-      padding: 1rem;
-      overflow: hidden;
-    }
-    .carrinho-container h2 {
-  text-align: center;
-  margin: 0.4rem 0;   /* reduz espaço acima e abaixo */
-  font-size: 1rem;    /* fonte menor e proporcional */
-  font-weight: bold;  /* mantém destaque institucional */
-}
-    .carrinho-scroll {
-      flex: 1;
-      overflow-y: auto;
-      margin-bottom: 1rem;
-    }
-    table#tabelaCarrinho {
-      width: 100%;
-      border-collapse: collapse;
-      table-layout: fixed;
-      word-wrap: break-word;
-    }
-    table#tabelaCarrinho th, table#tabelaCarrinho td {
-      padding: 0.6rem;
-      border-bottom: 1px solid #eee;
-    }
-    table#tabelaCarrinho th {
-      background: #007bff;
-      color: #fff;
-      font-weight: bold;
-      text-align: center;
-      font-size: 0.85rem;
-    }
-    table#tabelaCarrinho td {
-      text-align: left;
-      vertical-align: middle;
-      font-size: 0.8rem;
-    }
-    table#tabelaCarrinho td:first-child {
-      word-break: break-word;
-      white-space: normal;
-    }
-    /* Coluna do ✖ compacta */
-    table#tabelaCarrinho th:last-child,
-    table#tabelaCarrinho td:last-child {
-      width: 40px;
-      text-align: center;
-      padding: 0.4rem;
-    }
-    .quantidade-controle {
-      display: flex;
-      align-items: center;
-      gap: 0.4rem;
-      justify-content: flex-start;
-    }
-    .btn-quantidade {
-      background: #007bff;
-      color: #fff;
-      border: none;
-      padding: 0.2rem 0.5rem;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 0.85rem;
-    }
-    .btn-remover {
-      background: transparent;
-      color: #ff4444;
-      border: none;
-      font-size: 0.8rem;
-      font-weight: bold;
-      cursor: pointer;
-      line-height: 1;
-      margin: 0;
-    }
-    @media screen and (max-width: 480px) {
-      .quantidade-controle {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-    }
-    .carrinho-footer {
-      border-top: 1px solid #ddd;
-      padding-top: 0.8rem;
-      text-align: right;
-    }
-    #totalCarrinho {
-      font-weight: bold;
-      font-size: 1.2rem;
-      margin-bottom: 0.8rem;
-    }
-    .btn-finalizar {
-      background: #25D366;
-      color: #fff;
-      border: none;
-      padding: 0.6rem 1rem;
-      border-radius: 8px;
-      font-size: 0.9rem;
-      font-weight: bold;
-      cursor: pointer;
-      text-align: center;
-      width: 100%;
-    }
-
-    /* FOOTER */
-    footer {
-      height: 40px;
-      text-align: center;
-      color: #666;
-      font-size: 0.8rem;
-      padding: 0.5rem;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <a href="index.html">
-        <img src="imagens/logo-chefburger.jpg" alt="Chef Burger AO" />
-      </a>
-    </div>
-    <button class="btn-menu-mobile" onclick="toggleMenu()">Explorar</button>
-  </header>
-
-  <!-- MENU MOBILE -->
-  <nav class="menu-mobile" id="menuMobile">
-    <a href="index.html" class="btn-nav" onclick="fecharMenu()">Menu</a>
-    <a href="informacoes.html" class="btn-nav" onclick="fecharMenu()">Informações</a>
-    <a href="https://wa.me/244925918468" class="btn-nav whatsapp" onclick="fecharMenu()">Posso Ajudar?</a>
-  </nav>
-
-  <!-- NAV DESKTOP -->
-  <nav class="barra-navegacao">
-    <a href="index.html" class="btn-nav">Menu</a>
-    <a href="encomendas.html" class="btn-nav">Encomendas</a>
-    <a href="informacoes.html" class="btn-nav">Informações</a>
-    <a href="https://wa.me/244925918468" class="btn-nav whatsapp">Posso Ajudar?</a>
-  </nav>
-
-  <!-- CARRINHO -->
-  <div class="carrinho-container">
-    <h2>Encomenda</h2>
-        <div class="carrinho-scroll">
-      <table id="tabelaCarrinho">
-        <thead>
-          <tr>
-            <th>Item</th>
-            <th>Preço</th>
-            <th>QTT</th>
-            <th>✖</th>
-          </tr>
-        </thead>
-        <tbody id="listaCarrinho"></tbody>
-      </table>
-    </div>
-    <div class="carrinho-footer">
       <div id="totalCarrinho">Total: 0,00 KZ</div>
       <button class="btn-finalizar" onclick="finalizarEncomenda()">✅ Finalizar Encomenda</button>
     </div>
@@ -296,6 +19,15 @@
       const menu = document.getElementById("menuMobile");
       menu.style.display = "none";
     }
+
+    // Fecha o menu se clicar fora dele (ex.: no main ou body)
+    document.addEventListener("click", function(event) {
+      const menu = document.getElementById("menuMobile");
+      const botao = document.querySelector(".btn-menu-mobile");
+      if (menu.style.display === "flex" && !menu.contains(event.target) && !botao.contains(event.target)) {
+        fecharMenu();
+      }
+    });
 
     let carrinho = JSON.parse(localStorage.getItem("carrinhoChefBurger")) || [];
 
